# api_gateway/docs/swagger.json
@@ -8,6 +8,69 @@
     },
     "basePath": "/",
     "paths": {
+        "/advertisement/moderation/{id}": {
+            "put": {
+                "description": "Move an advertisement to the \"moderation\" status (requires authentication)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Advertisements"
+                ],
+                "summary": "Submit advertisement for moderation",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Advertisement ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Advertisement submitted for moderation successfully",
+                        "schema": {
+                            "$ref": "#/definitions/swapmeet_grpc.SubmitAdvertisementForModerationResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Advertisement not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/advertisement/{id}": {
             "get": {
                 "description": "Retrieve a published advertisement by its ID",
@@ -124,7 +187,7 @@
                 "tags": [
                     "Advertisements"
                 ],
-                "summary": "Update Advertisement",
+                "summary": "Update advertisement",
                 "parameters": [
                     {
                         "type": "string",
@@ -768,6 +831,14 @@
                 },
                 "user_name": {
                     "type": "string"
+                }
+            }
+        },
+        "swapmeet_grpc.SubmitAdvertisementForModerationResponse": {
+            "type": "object",
+            "properties": {
+                "advertisement": {
+                    "$ref": "#/definitions/swapmeet_grpc.UserAdvertisement"
                 }
             }
         },
