# app_server/internal/service/swapmeet.go
@@ -20,6 +20,7 @@ type SwapmeetRepo interface {
 	GetUserAdvertisements(ctx context.Context, userID string) ([]models.UserAdvertisement, error)                                                       // for authorized users
 	CreateAdvertisement(ctx context.Context, userID, categoryID, title, description, price, contactInfo string) (*models.UserAdvertisement, error)      // for authorized users
 	UpdateAdvertisement(ctx context.Context, userID, advertisementID, title, description, price, contactInfo string) (*models.UserAdvertisement, error) // for authorized users
+	SetModerationStatusForAdvertisement(ctx context.Context, userID, advertisementID string) (*models.UserAdvertisement, error)                         // for authorized users
 
 	EnsureUserExists(ctx context.Context, userID, userName string) error
 }
@@ -182,4 +183,20 @@ func (s *SwapmeetService) UpdateAdvertisement(ctx context.Context, advertisement
 	}
 
 	return s.Repo.UpdateAdvertisement(ctx, userID, advertisementID, title, description, price, contactInfo)
+}
+
+////
+
+func (s *SwapmeetService) SubmitAdvertisementForModeration(ctx context.Context, advertisementID string) (*models.UserAdvertisement, error) {
+	claims, err := s.authenticate(ctx)
+	if err != nil {
+		return nil, err
+	}
+
+	userID := strings.TrimSpace(claims.UserID)
+	if userID == "" {
+		return nil, models.ErrEmptyUserID
+	}
+
+	return s.Repo.SetModerationStatusForAdvertisement(ctx, userID, advertisementID)
 }
